// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rendering focuses the correct tab with keyboard navigation 1`] = `
<DocumentFragment>
  <div>
    <div
      data-reach-tabs=""
    >
      <div
        data-reach-tab-list=""
        role="tablist"
      >
        <button
          aria-controls="panel--3--0"
          aria-selected="false"
          data-reach-tab=""
          id="tab-1"
          role="tab"
          tabindex="-1"
          type="button"
        >
          Tab One
        </button>
        <button
          aria-controls="panel--3--1"
          aria-selected="true"
          data-reach-tab=""
          data-selected=""
          id="tab-2"
          role="tab"
          tabindex="0"
          type="button"
        >
          Tab Two
        </button>
        <button
          aria-controls="panel--3--2"
          aria-selected="false"
          data-reach-tab=""
          id="tab-3"
          role="tab"
          tabindex="-1"
          type="button"
        >
          Tab Three
        </button>
      </div>
      <div
        data-reach-tab-panels=""
      >
        <div
          aria-labelledby="tab--3--0"
          data-reach-tab-panel=""
          hidden=""
          id="panel--3--0"
          role="tabpanel"
          tabindex="-1"
        >
          <h1>
            one!
          </h1>
          <button>
            yo
          </button>
        </div>
        <div
          aria-labelledby="tab--3--1"
          data-reach-tab-panel=""
          id="panel--3--1"
          role="tabpanel"
          tabindex="-1"
        >
          <h1>
            two!
          </h1>
        </div>
        <div
          aria-labelledby="tab--3--2"
          data-reach-tab-panel=""
          hidden=""
          id="panel--3--2"
          role="tabpanel"
          tabindex="-1"
        >
          <h1>
            three!
          </h1>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`rendering should match the snapshot 1`] = `
<DocumentFragment>
  <div>
    <div
      data-reach-tabs=""
    >
      <div
        data-reach-tab-list=""
        role="tablist"
      >
        <button
          aria-controls="panel--1--0"
          aria-selected="true"
          data-reach-tab=""
          data-selected=""
          id="tab-1"
          role="tab"
          tabindex="0"
          type="button"
        >
          Tab One
        </button>
        <button
          aria-controls="panel--1--1"
          aria-selected="false"
          data-reach-tab=""
          id="tab-2"
          role="tab"
          tabindex="-1"
          type="button"
        >
          Tab Two
        </button>
        <button
          aria-controls="panel--1--2"
          aria-selected="false"
          data-reach-tab=""
          id="tab-3"
          role="tab"
          tabindex="-1"
          type="button"
        >
          Tab Three
        </button>
      </div>
      <div
        data-reach-tab-panels=""
      >
        <div
          aria-labelledby="tab--1--0"
          data-reach-tab-panel=""
          id="panel--1--0"
          role="tabpanel"
          tabindex="-1"
        >
          <h1>
            one!
          </h1>
          <button>
            yo
          </button>
        </div>
        <div
          aria-labelledby="tab--1--1"
          data-reach-tab-panel=""
          hidden=""
          id="panel--1--1"
          role="tabpanel"
          tabindex="-1"
        >
          <h1>
            two!
          </h1>
        </div>
        <div
          aria-labelledby="tab--1--2"
          data-reach-tab-panel=""
          hidden=""
          id="panel--1--2"
          role="tabpanel"
          tabindex="-1"
        >
          <h1>
            three!
          </h1>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
